# balance-payouts

./: .gitignore  README.md  balance-payouts-interview-solution.cabal  flake.nix
app/: Main.hs
app/Csv/: Csv.hs  Types.hs  Utils.hs
app/Csv/Stream/: StreamCsv.hs
app/DB/: DB.hs  Types.hs  Utils.hs
app/DB/Stream/: StreamDB.hs
res/: test_rates.csv  users.csv
